--- a/src/sass/components/_seo-msk.scss
+++ b/src/sass/components/_seo-msk.scss
@@ -73,7 +73,7 @@
     z-index: 1;
     font: 500 14px/16px FuturaPT;
     text-transform: uppercase;
-    color: $dark-gray-opacity-3;
+    color: $second-black-color-opacity-3;
     pointer-events: none;
 
     @include screen(xl) {
