--- a/src/sass/components/_field.scss
+++ b/src/sass/components/_field.scss
@@ -48,7 +48,7 @@
 
     .field__title {
       font: 500 14px/19px FuturaPT;
-      color: $gray-8-opacity-6;
+      color: $main-black-color-opacity-6;
     }
   }
 
