--- a/src/sass/components/_review.scss
+++ b/src/sass/components/_review.scss
@@ -51,7 +51,7 @@
     position: relative;
     padding-left: 15px;
     font: normal 14px/26px Roboto;
-    color: $gray-8-opacity-9;
+    color: $main-black-color-opacity-9;
 
     @include screen(xl) {
       order: 1;
@@ -99,7 +99,7 @@
 
   &__date {
     font: normal 14px/22px Roboto;
-    color: $gray-8-opacity-5;
+    color: $main-black-color-opacity-5;
 
     @include screen(xl) {
       margin-bottom: 20px;
