--- a/src/sass/components/_search.scss
+++ b/src/sass/components/_search.scss
@@ -47,7 +47,7 @@
 
 		&::placeholder {
 			font: normal 15px/18px FuturaPT;
-			color: $gray-8-opacity-6;
+			color: $main-black-color-opacity-6;
 		}
 
 		&:valid {
