--- a/src/sass/layout/_articles.scss
+++ b/src/sass/layout/_articles.scss
@@ -1,6 +1,6 @@
 .articles {
   &__header {
-    border-bottom: 1px solid rgba(216, 216, 216, .5);
+    border-bottom: 1px solid $gray-10-opacity-5;
 
     @include screen(xl) {
       padding: 20px;
@@ -46,7 +46,7 @@
       }
 
       &:not(:last-of-type) {
-        border-bottom: 1px solid #EAEAEA;
+        border-bottom: 1px solid $gray-3;
       }
     }
 
@@ -68,27 +68,27 @@
     span {
       margin-bottom: 15px;
       font: normal 14px/22px Roboto;
-      color: rgba(48, 55, 61, .5);
+      color: $main-black-color-opacity-5;
     }
 
     p {
       font: normal 15px/24px Roboto;
-      color: rgba(48, 55, 61, 1);
+      color: $main-black-color;
     }
 
     a {
       margin-bottom: 10px;
       font: 500 22px/26px FuturaPT;
-      color: #30373D;
+      color: $main-black-color;
     }
   }
 
   &__sort {
     padding: 5px;
     max-width: max-content;
-    border: 1px solid #E9E9E9;
+    border: 1px solid $gray-7;
     border-radius: 10px;
-    background: #FFFFFF;
+    background: $white;
 
     @include screen(xl) {
       width: 100%;
@@ -100,15 +100,15 @@
       padding: 12px 15px;
       width: 100%;
       font: 500 12px/16px Roboto;
-      color: #333333;
-      background-color: #ffffff;
+      color: $second-black-color;
+      background-color: $white;
       border-radius: 20px;
       transition: background-color .3s, color .1s;
       text-align: center;
 
       &:hover {
-        color: #ffffff;
-        background-color: #2C0952;
+        color: $white;
+        background-color: $third-color;
       }
     }
 
@@ -123,8 +123,8 @@
 
       &.active {
         a {
-          color: #ffffff;
-          background-color: #2C0952;
+          color: $white;
+          background-color: $third-color;
         }
       }
     }
