--- a/src/sass/layout/_catalog.scss
+++ b/src/sass/layout/_catalog.scss
@@ -9,7 +9,7 @@
     }
 
     &-top {
-      background: #FFFFFF;
+      background: $white;
 
       @include screen(xl) {
         padding: 10px 20px 20px;
@@ -17,8 +17,8 @@
 
       @include screen(l) {
         padding: 15px 30px 10px;
-        border: 1px solid #E7E7E7;
-        box-shadow: 0px 2px 7px rgba(0, 0, 0, 0.05);
+        border: 1px solid $gray-2;
+        box-shadow: 0px 2px 7px $black-opacity-05;
         background-repeat: no-repeat;
         border-radius: 20px;
       }
@@ -66,7 +66,7 @@
 
     &-bottom {
       @include screen(l) {
-        border-bottom: 1px solid #E9E9E9;
+        border-bottom: 1px solid $gray-7;
       }
     }
   }
@@ -78,9 +78,9 @@
 
     @include screen(xl) {
       padding-bottom: 15px;
-      background: #FFFFFF;
-      border-bottom: 1px solid #E7E7E7;
-      box-shadow: 0px 2px 3px 0 rgba(0, 0, 0, 0.05);
+      background: $white;
+      border-bottom: 1px solid $gray-2;
+      box-shadow: 0px 2px 3px 0 $black-opacity-05;
     }
   }
 
@@ -92,7 +92,7 @@
     label {
       font: 700 12px/15px FuturaPT;
       text-transform: uppercase;
-      color: rgba(48, 55, 61, .4);
+      color: $main-black-color-opacity-4;
     }
   }
 
@@ -102,18 +102,18 @@
     text-align: center;
     padding: 9px 15px;
     font: 600 16px/22px FuturaPT;
-    color: #FF548C;
-    background-color: #ffffff;
-    border: 1px solid rgba(236, 236, 236, .7);
+    color: $main-color;
+    background-color: $white;
+    border: 1px solid $gray-12-opacity-7;
     border-radius: 8px;
     transition: border .3s, background-color .3s, box-shadow .3s, color .15s;
     overflow: hidden;
 
     &:hover {
-      background-color: #FF548C;
-      color: #ffffff;
-      border-color: #FF548C;
-      box-shadow: 0px 6px 30px rgba(248, 53, 94, 0.4);
+      background-color: $main-color;
+      color: $white;
+      border-color: $main-color;
+      box-shadow: 0px 6px 30px $main-dark-color-opacity-4;
     }
   }
 
@@ -130,12 +130,12 @@
         p {
           &:first-of-type {
             font: 500 22px/26px FuturaPT;
-            color: #30373D;
+            color: $main-black-color;
           }
 
           &:last-of-type {
             font: normal 14px/26px Roboto, sans-serif;
-            color: rgba(48, 55, 61, .9);
+            color: $main-black-color-opacity-9;
           }
         }
       }
@@ -156,7 +156,7 @@
     @include screen(xl) {
       padding-left: 5px;
       padding-bottom: 20px;
-      border-bottom: 1px solid rgba(234, 234, 234, .5);
+      border-bottom: 1px solid $gray-3-opacity-5;
       overflow: hidden;
     }
 
@@ -186,15 +186,15 @@
         padding: 10px;
         width: max-content;
         font: 500 14px/20px Roboto;
-        color: rgba(48, 55, 61, 0.8);
-        background: #FFFFFF;
-        box-shadow: 0px 2px 7px rgba(0, 0, 0, 0.05);
+        color: $main-black-color-opacity-8;
+        background: $white;
+        box-shadow: 0px 2px 7px $black-opacity-05;
         border-radius: 10px;
         transition: background-color .3s, color .15s;
 
         &:hover {
-          background-color: #2C0952;
-          color: #ffffff;
+          background-color: $third-color;
+          color: $white;
         }
       }
     }
