--- a/src/sass/layout/_checkout.scss
+++ b/src/sass/layout/_checkout.scss
@@ -14,13 +14,13 @@
       display: block;
       text-transform: uppercase;
       font: 600 12px/20px FuturaPT;
-      color: rgba(48, 55, 61, .8);
+      color: $main-black-color-opacity-8;
     }
 
     &-subtitle {
       display: inline-block;
       font: 600 18px/20px FuturaPT;
-      color: rgba(48, 55, 61, .8);
+      color: $main-black-color-opacity-8;
 
       @include screen(xl) {
         margin-bottom: 30px;
@@ -33,8 +33,8 @@
   }
 
   &__cards {
-    border-top: 1px solid rgba(216, 216, 216, .5);
-    border-bottom: 1px solid rgba(216, 216, 216, .5);
+    border-top: 1px solid $gray-10-opacity-5;
+    border-bottom: 1px solid $gray-10-opacity-5;
 
     @include screen(xl) {
       margin-bottom: 40px;
@@ -46,7 +46,7 @@
   }
 
   &__card {
-    border-top: 1px solid rgba(216, 216, 216, .5);
+    border-top: 1px solid $gray-10-opacity-5;
 
     &:first-of-type {
       border-top: none;
@@ -57,20 +57,20 @@
     padding: 18px 15px;
     text-transform: uppercase;
     font: 600 18px/24px FuturaPT;
-    color: #ffffff;
-    background: #27CC00;
-    box-shadow: 0px 3px 10px rgba(39, 204, 0, 0.35);
+    color: $white;
+    background: $green;
+    box-shadow: 0px 3px 10px $green-opacity-35;
 
     &:hover {
-      background-color: #5EF13B;
-      box-shadow: 0px 3px 20px rgba(67, 254, 22, 0.701841);
+      background-color: $green-2;
+      box-shadow: 0px 3px 20px $green-4-opacity-7;
     }
   }
 
   &__btn-credit {
-    box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.08);
+    box-shadow: 0px 4px 12px $black-opacity-08;
     border-radius: 8px;
-    background: #FFFFFF;
+    background: $white;
     cursor: pointer;
     transition: box-shadow .3s;
 
@@ -87,15 +87,15 @@
     }
 
     &:hover {
-      background: #ffffff;
-      box-shadow: 5px 5px 15px rgba(0, 0, 0, .2);
+      background: $white;
+      box-shadow: 5px 5px 15px $black-opacity-2;
     }
 
     span {
       &:first-of-type {
         white-space: nowrap;
         text-transform: uppercase;
-        color: #FF548C;
+        color: $main-color;
 
         @include screen(xl) {
           font: 500 16px/19px FuturaPT;
@@ -107,9 +107,9 @@
       }
 
       &:last-of-type {
-        border-left: 1px solid rgba(233, 235, 239, .5);
+        border-left: 1px solid $gray-4-opacity-5;
         font: normal 14px/16px FuturaPT;
-        color: #333333;
+        color: $second-black-color;
 
         @include screen(xl) {
           padding-left: 15px;
@@ -130,16 +130,16 @@
   &__btn-question {
     margin-bottom: 30px;
     padding: 15px;
-    background: #FFFFFF;
-    border: 1px solid #27CC00;
+    background: $white;
+    border: 1px solid $green;
     border-radius: 8px;
-    color: #27CC00;
+    color: $green;
     font: 600 18px/24px FuturaPT;
     text-transform: uppercase;
 
     &:hover {
-      background: #ffffff;
-      box-shadow: 5px 5px 15px rgba(0, 0, 0, .1);
+      background: $white;
+      box-shadow: 5px 5px 15px $black-opacity-1;
     }
   }
 
@@ -166,9 +166,9 @@
 
   &__frame {
     margin-bottom: 30px;
-    border: 1px solid #EAEAEA;
+    border: 1px solid $gray-3;
     border-radius: 15px;
-    background: #F8F8F8;
+    background: $gray-light;
 
     @include screen(xl) {
       padding: 20px;
@@ -181,7 +181,7 @@
     &-title {
       display: inline-block;
       font: 500 24px/28px FuturaPT;
-      color: #2B2D30;
+      color: $third-black-color;
     }
   }
 
@@ -189,7 +189,7 @@
     &-list {
       padding-bottom: 20px;
       margin-bottom: 20px;
-      border-bottom: 1px solid rgba(234, 234, 234, .5);
+      border-bottom: 1px solid $gray-3-opacity-5;
 
       li {
         &:not(:last-of-type) {
@@ -200,28 +200,28 @@
 
     &-total {
       font: 600 24px/28px FuturaPT;
-      color: #2C0952;
+      color: $third-color;
     }
 
     &-sale {
       font: 600 18px/22px FuturaPT;
-      color: #FF548C;
+      color: $main-color;
     }
 
     &-delivery {
       font: 600 18px/22px FuturaPT;
-      color: #2C0952;
+      color: $third-color;
     }
   }
 
   &__bonus {
     padding-bottom: 30px;
     margin-bottom: 20px;
-    border-bottom: 1px solid rgba(234, 234, 234, .5);
+    border-bottom: 1px solid $gray-3-opacity-5;
 
     &-title {
       font: 500 18px/26px FuturaPT;
-      color: #30373D;
+      color: $main-black-color;
 
       @include screen(xl) {
         margin-bottom: 10px;
@@ -230,20 +230,20 @@
 
     &-value {
       font: 500 24px/28px FuturaPT;
-      color: #FF548C;
+      color: $main-color;
     }
   }
 
   &__promo-code {
     padding-bottom: 30px;
     margin-bottom: 30px;
-    border-bottom: 1px solid rgba(234, 234, 234, .5);
+    border-bottom: 1px solid $gray-3-opacity-5;
   }
 
   &__delivery {
     padding-bottom: 20px;
     margin-bottom: 20px;
-    border-bottom: 1px solid rgba(234, 234, 234, .5);
+    border-bottom: 1px solid $gray-3-opacity-5;
 
     p {
       font: normal 16px/24px Roboto;
@@ -274,7 +274,7 @@
   }
 
   &__list-select {
-    border: 1px solid #E9E9E9;
+    border: 1px solid $gray-7;
     border-radius: 10px;
 
     @include screen(xl) {
@@ -297,7 +297,7 @@
 
     span {
       font: 400 14px/16px Roboto;
-      color: rgba(43, 45, 48, 0.8);
+      color: $third-black-color-opacity-8;
 
       @include screen(xl) {
         text-align: left;
@@ -308,7 +308,7 @@
       label {
         position: relative;
         text-align: center;
-        background: #f8f8f8;
+        background: $gray-light;
         border: 1px solid transparent;
         cursor: pointer;
         transition: transform .15s;
@@ -319,8 +319,8 @@
           justify-content: flex-start;
           align-items: center;
           padding: 10px;
-          border-bottom: 1px solid #E9E9E9;
-          border-right: 1px solid #E9E9E9;
+          border-bottom: 1px solid $gray-7;
+          border-right: 1px solid $gray-7;
 
         }
 
@@ -337,21 +337,21 @@
 
       input:checked+label {
         z-index: 1;
-        background-color: #ffffff;
-        border: 1px solid #FF548C;
-        box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.1);
+        background-color: $white;
+        border: 1px solid $main-color;
+        box-shadow: 0px 2px 8px $black-opacity-1;
         border-radius: 10px;
         transform: scale(1.05, 1.05);
 
         span {
-          color: #FF548C;
+          color: $main-color;
         }
       }
 
       &:not(:last-of-type) {
         label {
           @include screen(l) {
-            border-right: 1px solid #E9E9E9;
+            border-right: 1px solid $gray-7;
           }
         }
       }
@@ -392,14 +392,14 @@
         display: block;
         position: relative;
         text-align: center;
-        background: #f8f8f8;
+        background: $gray-light;
         cursor: pointer;
         transition: transform .15s;
 
         @include screen(xl) {
           padding: 10px;
-          border-bottom: 1px solid #E9E9E9;
-          border-right: 1px solid #E9E9E9;
+          border-bottom: 1px solid $gray-7;
+          border-right: 1px solid $gray-7;
 
         }
 
@@ -410,14 +410,14 @@
 
       input:checked+label {
         z-index: 1;
-        background-color: #ffffff;
-        border: 1px solid #FF548C;
-        box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.1);
+        background-color: $white;
+        border: 1px solid $main-color;
+        box-shadow: 0px 2px 8px $black-opacity-1;
         border-radius: 10px;
         transform: scale(1.05, 1.1);
 
         span {
-          color: #FF548C;
+          color: $main-color;
         }
       }
     }
@@ -427,7 +427,7 @@
     display: inline-block;
     text-transform: uppercase;
     font: 600 16px/19px FuturaPT;
-    color: #30373D;
+    color: $main-black-color;
   }
 
   &__checkbox {
@@ -448,8 +448,8 @@
       width: 20px;
       height: 20px;
       border-radius: 4px;
-      background-color: #ffffff;
-      border: 2px solid #E3E3E3;
+      background-color: $white;
+      border: 2px solid $gray-9;
     }
 
     input:checked+label::before {
@@ -472,7 +472,7 @@
       margin-bottom: 12px;
       display: inline-block;
       font: 500 32px/37px Roboto;
-      color: #2B2D30;
+      color: $third-black-color;
     }
 
     span {
@@ -482,12 +482,12 @@
         margin-bottom: 12px;
         text-transform: uppercase;
         font: 600 12px/20px FuturaPT;
-        color: rgba(48, 55, 61, .8);
+        color: $main-black-color-opacity-8;
       }
 
       &:last-of-type {
         font: normal 14px/20px Roboto;
-        color: rgba(48, 55, 61, .5);
+        color: $main-black-color-opacity-5;
       }
     }
   }
@@ -515,14 +515,6 @@
       &:not(:last-of-type) {
         @include screen(xl) {
           margin-right: 10px;
-        }
-      }
-
-      &:nth-of-type(2n-1) {
-        @include screen(l) {
-          @include screen(l) {
-            /* margin: 0 10px 10px -10px; */
-          }
         }
       }
     }
