--- a/src/sass/layout/_credit.scss
+++ b/src/sass/layout/_credit.scss
@@ -20,8 +20,8 @@
 
     @include screen(l) {
       padding: 15px 30px 40px;
-      border-bottom: 1px solid rgba(216, 216, 216, 0.5);
-      background: url('../img/pic/bg/credit.svg') no-repeat, #F8F8F8;
+      border-bottom: 1px solid $gray-10-opacity-5;
+      background: url('../img/pic/bg/credit.svg') no-repeat, $gray-light;
       background-size: 270px 280px;
       background-position: 850px 40px;
     }
@@ -30,20 +30,20 @@
       @include screen(xl) {
         margin-bottom: 30px;
         font: normal 24px/32px FuturaPT;
-        color: #30373D;
+        color: $main-black-color;
       }
 
       @include screen(l) {
         margin-bottom: 30px;
         font: normal 24px/32px FuturaPT;
-        color: #30373D;
+        color: $main-black-color;
       }
     }
 
     &-features {
       @include screen(xl) {
         padding-bottom: 30px;
-        border-bottom: 1px solid rgba(216, 216, 216, 0.5);
+        border-bottom: 1px solid $gray-10-opacity-5;
       }
 
       ul {
@@ -85,7 +85,7 @@
           position: relative;
           padding-left: 20px;
           font: normal 14px/24px Roboto;
-          color: #30373D;
+          color: $main-black-color;
 
           &::before {
             content: "";
@@ -114,7 +114,7 @@
   &__subtitle {
     display: inline-block;
     font: 400 24px/32px FuturaPT;
-    color: #2B2D30;
+    color: $third-black-color;
 
     @include screen(xl) {
       margin-bottom: 30px;
@@ -143,7 +143,6 @@
 
     &-tabs {
       @include screen(xl) {
-        /*  padding-left: 20px; */
         justify-content: center;
       }
 
@@ -154,7 +153,7 @@
       a {
         display: inline-block;
         position: relative;
-        color: #333333;
+        color: $second-black-color;
 
         @include screen(xl) {
           padding: 10px;
@@ -184,11 +183,11 @@
       li {
         &.uk-active {
           a {
-            color: #FF548C;
+            color: $main-color;
 
             &::after {
               width: 100%;
-              background: #FF548C;
+              background: $main-color;
             }
           }
         }
@@ -196,8 +195,8 @@
     }
 
     &-content {
-      background: #F8F8F8;
-      border: 1px solid #EAEAEA;
+      background: $gray-light;
+      border: 1px solid $gray-3;
       border-radius: 20px;
 
       @include screen(xl) {
@@ -209,7 +208,7 @@
       }
 
       p {
-        color: #333333;
+        color: $second-black-color;
 
         @include screen(xl) {
           margin-bottom: 20px;
@@ -237,13 +236,13 @@
       @include screen(xl) {
         padding-bottom: 30px;
         margin-bottom: 30px;
-        border-bottom: 1px solid #E3E3E3;
+        border-bottom: 1px solid $gray-9;
       }
 
       @include screen(l) {
         padding-bottom: 30px;
         margin-bottom: 30px;
-        border-bottom: 1px solid #E3E3E3;
+        border-bottom: 1px solid $gray-9;
       }
 
       div {
@@ -275,7 +274,7 @@
       }
 
       p {
-        color: #30373D;
+        color: $main-black-color;
 
         @include screen(xl) {
           font: 500 20px/24px FuturaPT;
@@ -304,12 +303,12 @@
           margin-bottom: 10px;
           text-transform: uppercase;
           font: 500 14px/15px FuturaPT;
-          color: rgba(43, 45, 48, .3);
+          color: $third-black-color-opacity-3;
         }
 
         &:last-of-type {
           font: normal 32px/44px Roboto;
-          color: rgba(43, 45, 48, .9);
+          color: $third-black-color-opacity-9;
         }
       }
     }
