--- a/src/sass/layout/_footer.scss
+++ b/src/sass/layout/_footer.scss
@@ -8,7 +8,7 @@
   &__subtitle {
     text-transform: uppercase;
     font: 600 16px/19px FuturaPT;
-    color: #C0C0C0;
+    color: $gray-19;
   }
 
   &__description {
@@ -27,7 +27,7 @@
 
     p {
       font: normal 14px/26px Roboto;
-      color: rgba(48, 55, 61, .9);
+      color: $main-black-color-opacity-9;
 
       @include screen(xl) {
         margin-bottom: 20px;
@@ -45,12 +45,12 @@
 
     span {
       font: normal 12px/18px Roboto;
-      color: rgba(51, 51, 51, .5);
+      color: $second-black-color-opacity-5;
 
       @include screen(xl) {
         display: block;
         padding: 20px 15px;
-        border-top: 1px solid #F1E8E8;
+        border-top: 1px solid $gray-20;
       }
     }
   }
@@ -64,7 +64,7 @@
     @include screen(xl) {
       margin-bottom: 40px;
       padding: 0 15px 20px;
-      border-bottom: 1px solid #F1E8E8;
+      border-bottom: 1px solid $gray-20;
     }
 
     @include screen(l) {
@@ -95,7 +95,7 @@
 
     a {
       border-bottom: 1px solid transparent;
-      color: #333333;
+      color: $second-black-color;
       transition: border .3s, color .3s;
 
       @include screen(xl) {
@@ -107,8 +107,8 @@
       }
 
       &:hover {
-        border-color: #FF548C;
-        color: #FF548C;
+        border-color: $main-color;
+        color: $main-color;
       }
     }
 
@@ -124,7 +124,7 @@
   &__contacts {
     @include screen(l) {
       padding: 60px 40px 40px;
-      border-left: 1px solid #F1E8E8;
+      border-left: 1px solid $gray-20;
     }
 
     .footer__subtitle {
@@ -143,12 +143,12 @@
       a {
         margin-bottom: 20px;
         font: 600 32px/37px FuturaPT;
-        color: #333333;
+        color: $second-black-color;
       }
 
       span {
         font: normal 14px/18px FuturaPT;
-        color: rgba(51, 51, 51, .5);
+        color: $second-black-color-opacity-5;
       }
     }
   }
@@ -156,7 +156,7 @@
   &__address {
     margin-bottom: 10px;
     font: normal 14px/26px Roboto;
-    color: rgba(48, 55, 61, .9);
+    color: $main-black-color-opacity-9;
 
     @include screen(xl) {
       padding: 0 15px;
@@ -169,7 +169,7 @@
     width: max-content;
     border-bottom: 1px solid transparent;
     font: 600 16px/22px FuturaPT;
-    color: #FF548C;
+    color: $main-color;
     cursor: pointer;
     transition: border .3s;
 
@@ -178,13 +178,13 @@
     }
 
     &:hover {
-      border-color: #FF548C;
+      border-color: $main-color;
     }
   }
 
   &__socials {
     margin-bottom: 20px;
-    border-top: 1px solid rgba(0, 0, 0, .1);
+    border-top: 1px solid $black-opacity-1;
 
     @include screen(xl) {
       padding: 20px 15px 0;
