--- a/src/sass/layout/_popup.scss
+++ b/src/sass/layout/_popup.scss
@@ -3,7 +3,7 @@
     padding: 0;
     border-radius: 20px;
     overflow: hidden;
-    box-shadow: 0px 10px 28px #00000033;
+    box-shadow: 0px 10px 28px $black-opacity-45;
     border-radius: 24px;
     background: transparent;
 
@@ -22,8 +22,8 @@
 
   &__header {
     padding: 35px;
-    background: #2C0952;
-    color: #ffffff;
+    background: $third-color;
+    color: $white;
     border-radius: 24px 24px 0 0;
 
     p {
@@ -40,7 +40,7 @@
   }
 
   &__content {
-    background: #ffffff;
+    background: $white;
     overflow: hidden;
     border-radius: 0 0 24px 24px;
 
@@ -54,7 +54,7 @@
   }
 
   &__footer {
-    border-top: 1px solid rgba(216, 216, 216, .5);
+    border-top: 1px solid $gray-10-opacity-5;
 
     @include screen(xl) {
       margin-top: 20px;
@@ -70,7 +70,7 @@
       position: relative;
       cursor: pointer;
       font: normal 12px/16px Roboto;
-      color: #30373D;
+      color: $main-black-color;
     }
 
     input+label::after {
@@ -79,8 +79,8 @@
       width: 20px;
       height: 20px;
       border-radius: 4px;
-      background-color: #ffffff;
-      border: 2px solid #E3E3E3;
+      background-color: $white;
+      border: 2px solid $gray-9;
 
       @include screen(xl) {
         top: -3px;
@@ -118,8 +118,8 @@
     }
 
     a {
-      color: #FF548C;
-      border-bottom: 1px solid #FF548C;
+      color: $main-color;
+      border-bottom: 1px solid $main-color;
     }
   }
 
@@ -128,7 +128,7 @@
       position: relative;
       cursor: pointer;
       font: normal 14px/16px Roboto;
-      color: #30373D;
+      color: $main-black-color;
     }
 
     input+label::after {
@@ -141,8 +141,8 @@
       width: 18px;
       height: 18px;
       border-radius: 50%;
-      background-color: #ffffff;
-      border: 1px solid #E9EBEF;
+      background-color: $white;
+      border: 1px solid $gray-4;
     }
 
     input:checked+label::before {
@@ -155,7 +155,7 @@
       width: 10px;
       height: 10px;
       border-radius: 50%;
-      background-color: #FF548C;
+      background-color: $main-color;
       z-index: 1;
     }
   }
@@ -164,7 +164,7 @@
     padding: 10px;
     width: 50px;
     height: auto;
-    fill: #B8B4B4;
+    fill: $gray-26;
     cursor: pointer;
     transition: opacity .3s;
 
@@ -176,7 +176,7 @@
   .title {
     display: block;
     margin-bottom: 5px;
-    color: #ffffff;
+    color: $white;
 
     @include screen(xl) {
       font-size: 24px;
@@ -186,7 +186,7 @@
   &__subtitle {
     font: 600 12px/18px FuturaPT;
     text-transform: uppercase;
-    color: rgba(48, 55, 61, .8);
+    color: $main-black-color-opacity-8;
   }
 
   .btn {
@@ -195,29 +195,29 @@
     text-transform: uppercase;
 
     &--gray {
-      background: #F8F8F8;
-      color: rgb(145, 141, 141);
+      background: $gray-light;
+      color: $gray-27;
 
       &:hover {
-        background: #ffffff;
-        box-shadow: 5px 5px 15px rgba(0, 0, 0, .2);
+        background: $white;
+        box-shadow: 5px 5px 15px $black-opacity-2;
       }
     }
 
     &--green {
-      background: #FFFFFF;
-      border: 1px solid #27CC00;
-      color: #27CC00;
+      background: $white;
+      border: 1px solid $green;
+      color: $green;
 
       &:hover {
-        background: #ffffff;
-        box-shadow: 5px 5px 15px rgba(0, 0, 0, .2);
+        background: $white;
+        box-shadow: 5px 5px 15px $black-opacity-2;
       }
     }
 
     &--disabled {
-      background: #B4B4B4;
-      color: #ffffff;
+      background: $gray-26;
+      color: $white;
       cursor: not-allowed;
 
       &:hover {
@@ -226,9 +226,9 @@
     }
 
     &--light {
-      background-color: #FFFFFF;
-      border: 1px solid #D1D1D1;
-      color: rgba(48, 55, 61, .4);
+      background-color: $white;
+      border: 1px solid $gray-28;
+      color: $main-black-color-opacity-4;
 
       &:hover {
         box-shadow: none;
@@ -236,9 +236,9 @@
     }
 
     &--dark {
-      background-color: #B4B4B4;
+      background-color: $gray-26;
       border: none;
-      color: #ffffff;
+      color: $white;
       cursor: not-allowed;
 
       &:hover {
@@ -250,8 +250,8 @@
   .product-card {
     padding: 15px 0 10px;
     margin-bottom: 30px;
-    border-top: 1px solid rgba(216, 216, 216, .5);
-    border-bottom: 1px solid rgba(216, 216, 216, .5);
+    border-top: 1px solid $gray-10-opacity-5;
+    border-bottom: 1px solid $gray-10-opacity-5;
 
     &--checkout .product-card__image {
       width: 75px;
@@ -267,19 +267,19 @@
 
     &-value {
       font: normal 14px/24px Roboto;
-      color: #30373D;
+      color: $main-black-color;
     }
 
     &-old {
       margin-right: 5px;
       font: 700 12px/14px Roboto;
       text-decoration-line: line-through;
-      color: rgba(48, 55, 61, .5);
+      color: $main-black-color-opacity-5;
     }
 
     &-total {
       font: 700 24px/28px Roboto;
-      color: #2C0952;
+      color: $third-color;
     }
 
     &-sale {
@@ -287,8 +287,8 @@
       margin: 2px 0 0 0;
       text-align: center;
       font: 700 10px/12px Roboto;
-      color: #FF548C;
-      background-color: rgba(255, 84, 140, .2);
+      color: $main-color;
+      background-color: $main-color-opacity-2;
       border-radius: 13px;
     }
   }
@@ -299,7 +299,7 @@
     span {
       display: block;
       text-align: center;
-      color: #30373D;
+      color: $main-black-color;
     }
 
     &-title {
@@ -364,11 +364,11 @@
         span:first-of-type {
           font: 600 12px/20px FuturaPT;
           text-transform: uppercase;
-          color: rgba(48, 55, 61, .8);
+          color: $main-black-color-opacity-8;
         }
 
         &-total {
-          color: #30373D;
+          color: $main-black-color;
         }
       }
     }
@@ -448,19 +448,19 @@
       .nice-select {
         position: absolute;
         bottom: 20px;
-        background: #6a528a !important;
-        box-shadow: 0px 2px 7px rgba(0, 0, 0, 0.05) !important;
+        background: $second-color-opacity-7 !important;
+        box-shadow: 0px 2px 7px $black-opacity-05 !important;
         border-radius: 10px !important;
         border: none !important;
         transition: background-color .3s;
 
         &.open {
-          background: #1c043a !important;
+          background: $thirs-color-2 !important;
         }
 
         li:hover {
-          background: #2C0952 !important;
-          color: #ffffff !important;
+          background: $third-color !important;
+          color: $white !important;
         }
       }
     }
@@ -480,7 +480,7 @@
 
     .popup-maps__wrap {
       @include screen(xl) {
-        background-color: #F4F4F4;
+        background-color: $gray-light-4;
       }
 
       @include screen(l) {
@@ -490,7 +490,7 @@
 
     .popup-maps__list {
       position: relative;
-      
+
 
       @include screen(xl) {
         display: flex;
@@ -501,14 +501,14 @@
         overflow-y: scroll;
         width: 300px;
         height: 500px;
-        border-top: 1px solid #E6E6E6;
-        border-right: 1px solid #E6E6E6;
+        border-top: 1px solid $gray-17;
+        border-right: 1px solid $gray-17;
       }
     }
 
     .popup-maps__item {
       position: relative;
-      border-top: 1px solid #E6E6E6;
+      border-top: 1px solid $gray-17;
 
       @include screen(xl) {
         padding: 10px;
@@ -521,11 +521,11 @@
 
       &.active {
         @include screen(l) {
-          background-color: rgba(230, 230, 230, .3);
+          background-color: $gray-17-opacity-3;
         }
 
         & div {
-          background-color: #ffffff;
+          background-color: $white;
           border-color: transparent;
         }
 
@@ -568,9 +568,8 @@
 
         @include screen(xl) {
           padding: 20px 20px 15px 15px;
-          background-color: #F4F4F4;
-          /*  box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.05); */
-          border: 1px solid #E2E2E2;
+          background-color: $gray-light-4;
+          border: 1px solid $gray-9;
           border-radius: 8px;
         }
 
@@ -580,7 +579,7 @@
 
         &:hover {
           @include screen(l) {
-            background-color: rgba(230, 230, 230, .3);
+            background-color: $gray-17-opacity-3;
           }
         }
       }
@@ -592,7 +591,7 @@
         position: relative;
         padding-left: 25px;
         font: 500 16px/19px Roboto;
-        color: #797C80;
+        color: $gray-18;
         white-space: nowrap;
 
         &::before {
@@ -612,12 +611,12 @@
         white-space: nowrap;
         margin-bottom: 10px;
         font: normal 16px/19px Roboto;
-        color: #2B2D30;
+        color: $third-black-color;
       }
 
       &-phone {
         font: normal 14px/16px Roboto;
-        color: #797C80;
+        color: $gray-18;
       }
     }
   }
@@ -678,9 +677,9 @@
     }
 
     .popup__container {
-      border: 1px solid #EAEAEA;
+      border: 1px solid $gray-3;
       border-radius: 15px;
-      background: #F8F8F8;
+      background: $gray-light;
 
       @include screen(xl) {
         padding: 20px;
@@ -694,17 +693,17 @@
       &-header {
         margin: 10px 0 20px;
         padding-bottom: 20px;
-        border-bottom: 1px solid rgba(216, 216, 216, .5);
+        border-bottom: 1px solid $gray-10-opacity-5;
 
         span {
           &:first-of-type {
             font: 500 48px/56px Roboto;
-            color: #FF548C;
+            color: $main-color;
           }
 
           &:last-of-type {
             font: normal 12px/20px Roboto;
-            color: rgba(51, 51, 51, .5);
+            color: $second-black-color-opacity-5;
 
             br {
               @include screen(xl) {
@@ -720,7 +719,7 @@
           display: inline-block;
           margin-bottom: 20px;
           font: 600 24px/32px FuturaPT;
-          color: #30373D;
+          color: $main-black-color;
         }
       }
     }
@@ -735,7 +734,7 @@
         margin-top: 15px;
         text-align: center;
         font: 500 18px/32px FuturaPT;
-        color: #FF548C;
+        color: $main-color;
       }
     }
   }
@@ -763,7 +762,7 @@
             margin: auto;
             width: 1px;
             height: 50px;
-            background-color: rgba(255, 255, 255, .2);
+            background-color: $white-opacity-2;
           }
         }
       }
@@ -771,13 +770,13 @@
 
     .popup__content {
       input {
-        border: 1px solid #FF548C;
-        box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.08);
+        border: 1px solid $main-color;
+        box-shadow: 0px 4px 12px $black-opacity-08;
       }
 
       p {
         font: normal 14px/20px Roboto;
-        color: rgba(48, 55, 61, .5);
+        color: $main-black-color-opacity-5;
       }
     }
 
@@ -795,7 +794,7 @@
         display: block;
         text-align: center;
         font: normal 14px/16px Roboto;
-        color: rgba(48, 55, 61, .5);
+        color: $main-black-color-opacity-5;
         text-decoration: underline;
       }
     }
@@ -812,8 +811,8 @@
       a {
         display: inline;
         margin: 0;
-        color: #FF548C;
-        border-bottom: 1px solid #FF548C;
+        color: $main-color;
+        border-bottom: 1px solid $main-color;
         text-decoration: none;
         font: normal 12px/16px Roboto;
       }
@@ -837,7 +836,7 @@
         display: block;
         text-align: center;
         font: normal 14px/16px Roboto;
-        color: rgba(48, 55, 61, .5);
+        color: $main-black-color-opacity-5;
         text-decoration: underline;
       }
     }
@@ -846,8 +845,8 @@
       a {
         display: inline;
         margin: 0;
-        color: #FF548C;
-        border-bottom: 1px solid #FF548C;
+        color: $main-color;
+        border-bottom: 1px solid $main-color;
         text-decoration: none;
         font: normal 12px/16px Roboto;
       }
@@ -875,7 +874,7 @@
     .field {
       &:nth-of-type(5) {
         padding-top: 20px;
-        border-top: 1px solid rgba(216, 216, 216, .5);
+        border-top: 1px solid $gray-10-opacity-5;
       }
     }
   }
@@ -948,7 +947,7 @@
         vertical-align: middle;
         width: 25px;
         height: 25px;
-        fill: #FF548C;
+        fill: $main-color;
       }
     } */
 
@@ -970,7 +969,7 @@
           vertical-align: middle;
           width: 25px;
           height: 25px;
-          fill: #FF548C;
+          fill: $main-color;
         }
       }
     }
@@ -979,9 +978,9 @@
       @include screen(xl) {
         width: 100%;
         padding: 12px 150px 12px 20px;
-        border: 1px solid #DDDDDD;
+        border: 1px solid $gray-22;
         border-radius: 12px;
-        background: url('../img/pic/ico/search.svg') 20px center no-repeat, #ffffff;
+        background: url('../img/pic/ico/search.svg') 20px center no-repeat, $white;
       }
 
       &:valid {
@@ -1010,9 +1009,9 @@
         z-index: 100;
         margin-top: 5px;
         width: 100%;
-        background: #FFFFFF;
-        border: 1px solid #E5E5E5;
-        box-shadow: 0px 4px 24px rgba(0, 0, 0, 0.1);
+        background: $white;
+        border: 1px solid $gray-16;
+        box-shadow: 0px 4px 24px $black-opacity-1;
         border-radius: 8px;
         overflow: hidden;
         transition: opacity .3s;
@@ -1022,20 +1021,20 @@
         @include screen(xl) {
           display: block;
           padding: 17px 20px 15px;
-          color: #30373D;
+          color: $main-black-color;
         }
 
         &:not(:last-of-type) {
           @include screen(xl) {
-            border-bottom: 1px solid #E6E6E6;
+            border-bottom: 1px solid $gray-17;
             font: normal 16px/19px Roboto;
           }
         }
 
         &:hover {
           @include screen (xl) {
-            background: #2C0952;
-            color: rgba(255, 255, 255, .9);
+            background: $third-color;
+            color: $white-opacity-9;
           }
         }
       }
@@ -1052,7 +1051,7 @@
     .popup__header {
       p {
         span {
-          color: #ffffff !important;
+          color: $white !important;
         }
       }
     }
@@ -1063,10 +1062,10 @@
       margin-bottom: 15px;
       padding: 10px 20px;
       width: 100%;
-      background: #EFEFF0;
+      background: $gray-15;
       border-radius: 8px;
       font: normal 18px/19px FuturaPT;
-      color: #30373D;
+      color: $main-black-color;
       border: none;
     }
 
@@ -1078,9 +1077,9 @@
 
       &.active {
         a {
-          background: #6344B6;
-          box-shadow: 0px 4px 12px rgba(107, 72, 169, 0.4);
-          color: #ffffff;
+          background: $second-color;
+          box-shadow: 0px 4px 12px $second-color-opacity-4;
+          color: $white;
         }
       }
     }
@@ -1089,16 +1088,16 @@
       display: block;
       padding: 10px 15px;
       font: 400 16px/20px Roboto;
-      color: #30373D;
-      background: #E9E9E9;
-      box-shadow: 0px 2px 7px rgba(0, 0, 0, 0.05);
+      color: $main-black-color;
+      background: $gray-7;
+      box-shadow: 0px 2px 7px $black-opacity-05;
       border-radius: 10px;
       transition: background-color .3s, box-shadow .3s, color .15s;
 
       &:hover {
-        background: #6344B6;
-        box-shadow: 0px 4px 12px rgba(107, 72, 169, 0.4);
-        color: #ffffff;
+        background: $second-color;
+        box-shadow: 0px 4px 12px $second-color-opacity-4;
+        color: $white;
       }
     }
   }
@@ -1150,8 +1149,8 @@
 
     .popup__content {
       @include screen(xl) {
-        background: #F8F8F8;
-        box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.07);
+        background: $gray-light;
+        box-shadow: 0px 2px 10px $black-opacity-08;
       }
 
       @include screen(l) {
@@ -1176,7 +1175,7 @@
         margin-right: 20px;
         display: block;
         font: 500 28px/36px FuturaPT;
-        color: #30373D;
+        color: $main-black-color;
       }
     }
 
@@ -1186,9 +1185,9 @@
         width: 100%;
         max-width: 110px;
         font: 600 15px/18px FuturaPT;
-        color: #6B6B6B;
+        color: $gray-21;
         text-transform: uppercase;
-        background: #DDDDDD;
+        background: $gray-22;
         border-radius: 8px;
         transition: box-shadow .3s;
         box-shadow: none;
@@ -1200,9 +1199,9 @@
 
       &:hover {
         @include screen(xl) {
-          background: #DDDDDD;
-          color: #6B6B6B;
-          box-shadow: inset 2px 2px 5px rgba(154, 147, 140, 0.5), 1px 1px 5px rgba(255, 255, 255, 1);
+          background: $gray-22;
+          color: $gray-21;
+          box-shadow: inset 2px 2px 5px $gray-23-opacity-5, 1px 1px 5px $white;
         }
       }
     }
