--- a/src/sass/layout/_question.scss
+++ b/src/sass/layout/_question.scss
@@ -1,6 +1,6 @@
 .question {
-  background: #FFFFFF;
-  box-shadow: 0px 2px 30px rgba(0, 0, 0, 0.1);
+  background: $white;
+  box-shadow: 0px 2px 30px $black-opacity-1;
   border-radius: 15px;
 
   @include screen(xl) {
@@ -14,7 +14,7 @@
   &__title {
     display: block;
     font: 600 28px/33px FuturaPT;
-    color: #30373D;
+    color: $main-black-color;
 
     @include screen(xl) {
       margin-bottom: 10px;
@@ -28,7 +28,7 @@
 
   p {
     font: normal 14px/26px Roboto;
-    color: rgba(48, 55, 61, .9);
+    color: $main-black-color-opacity-9;
 
     @include screen(xl) {
       margin-bottom: 30px;
@@ -69,9 +69,9 @@
 
     input {
       padding: 15px 20px;
-      border: 1px solid #E9E9E9;
-      box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.08);
-      background: #FFFFFF;
+      border: 1px solid $gray-7;
+      box-shadow: 0px 4px 12px $black-opacity-08;
+      background: $white;
 
       @include screen(xl) {
         max-width: 300px;
