--- a/src/sass/layout/_reviews.scss
+++ b/src/sass/layout/_reviews.scss
@@ -10,7 +10,7 @@
   }
 
   &__header {
-    border-bottom: 1px solid rgba(216, 216, 216, .5);
+    border-bottom: 1px solid $gray-10-opacity-5;
 
     @include screen(xl) {
       padding: 20px;
@@ -81,7 +81,7 @@
 
     @include screen(xl) {
       padding-bottom: 60px;
-      border-bottom: 1px solid rgba(234, 234, 234, .8);
+      border-bottom: 1px solid $gray-3-opacity-8;
     }
 
     .swiper-pagination {
@@ -95,10 +95,10 @@
 
       &-bullet {
         opacity: 1;
-        background-color: #E0E0E0;
+        background-color: $gray-31;
 
         &-active {
-          background-color: #7A7A7A;
+          background-color: $gray-29;
         }
       }
     }
@@ -141,7 +141,7 @@
         img {
           width: 100%;
           height: auto;
-          border: 1px solid #EAEAEA;
+          border: 1px solid $gray-3;
           border-radius: 15px;
           overflow: hidden;
 
@@ -157,13 +157,13 @@
           &:first-child {
             padding-left: 10px;
             font: 500 22px/26px FuturaPT;
-            color: #30373D;
+            color: $main-black-color;
           }
 
           &:last-child {
             padding-right: 10px;
             font: 300 16px/19px Roboto;
-            color: #FF548C;
+            color: $main-color;
           }
         }
       }
@@ -171,7 +171,7 @@
       span {
         padding-left: 10px;
         font: normal 14px/22px Roboto;
-        color: rgba(48, 55, 61, .5);
+        color: $main-black-color-opacity-5;
       }
     }
   }
@@ -190,15 +190,15 @@
     text-align: center;
     white-space: nowrap;
     font: 500 16px/22px FuturaPT;
-    color: #f8355e;
+    color: $main-dark-color;
     border-radius: 8px;
-    background-color: #fff;
+    background-color: $white;
     transition: box-shadow .3s, color .1s, background-color .3s, border .3s;
-    border: 1px solid #f8355e;
+    border: 1px solid $main-dark-color;
 
     &:hover {
-      background-color: #f8355e;
-      color: #fff;
+      background-color: $main-dark-color;
+      color: $white;
       border: 1px solid transparent;
     }
   }
